# orb-classification

./: .gitignore  pyproject.toml
classifier/: base_model.py  resnet18.py
data_loader/: orb_classifier_dataset.py  orb_features_data_module.py  orb_features_dataset.py  orb_regressor_dataset.py
models/: base_model.py  classifier.py  regressor.py  resnet18.py
notebooks/: experiment1.ipynb  experiment2.ipynb  patterns.ipynb  regressor.ipynb  rosbag_nn.ipynb  train_and_save.ipynb  train_model.ipynb
notebooks/evgeny/: experiment1.ipynb
