[tool.poetry]
name = "orb-classification"
version = "0.1.0"
description = ""
authors = ["Pavel <p.karpyshev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
typing-extensions = "^4.2.0"
jupyterlab = "^3.4.3"
urllib3 = "^1.26.9"
Pillow = "^9.1.1"
idna = "^3.3"
charset-normalizer = "^2.0.12"
certifi = "^2022.5.18"
requests = "^2.28.0"
ipywidgets = "^7.7.0"
jupyter = "^1.0.0"
pip = "^22.1.2"
ipykernel = "^6.13.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

